--- a/docs/40_topics/75_ct_files.mdx
+++ b/docs/40_topics/75_ct_files.mdx
@@ -28,3 +28,6 @@ CTfiles were created by MDL Information Systems, later acquired by Symyx Technol
 ## Sources and further information
 
 - [CTfile Formats, Standardizing Chemical Representation](https://discover.3ds.com/ctfile-documentation-request-form)
+
+----
+Main author: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
