--- a/docs/40_topics/110_data_life_cycle.mdx
+++ b/docs/40_topics/110_data_life_cycle.mdx
@@ -32,6 +32,13 @@ If you use existing data or samples, **clarify the rights of use**. In this case
 In the data processing phase, the collected data should be **digitised** if it is not directly coming in a digital format and as far as it is possible. An electronic lab notebook can greatly assist in this step and brings the data together—whether digital or digitised. Furthermore, **you should think about collecting further information and metadata** on the data. Think about the different types of metadata such as descriptive, administrative, or structural metadata. Enriching the data with further, machine-readable metadata makes the data searchable.
 Moreover, **quality assurance** is important at this phase. Check, validate and clean the data! You should save the data and prepare a data backup.
 
+## Phase 4: Analysis
+
+In the 4th phase, as the name suggests, the focus is on the **analysis and interpretation of the data**. After analysing the data, the data should be evaluated. You should also consider **sharing the data** with colleagues in a closed and secure environment like on a project or working group level. Secure environments for sharing data are often provided by universities or federal states through Sync&share solutions. Consult your local research data team about this. 
+
+Before sharing data, you should check whether the data is subject to **copyright protection or other protective rights**. 
+
+
 ## Phase 5: Disclosure/ Publication
 
 During this exchange and the associated reflections on the data, you should think about archiving and using the data in scientific publications. If you are not aware of any **criteria for archiving** and no criteria are specified in your working group or institute, decision-making guides such as the [“5 steps to decide what data to keep”](https://www.dcc.ac.uk/guidance/how-guides/five-steps-decide-what-data-keep)  outlined by the DCC can help. Based on the established criteria, it is determined which of the collected raw data should be archived and which should be deliberately deleted.
