--- a/docs/50_lead-by-example.mdx
+++ b/docs/50_lead-by-example.mdx
@@ -18,8 +18,8 @@ Do you want to have your published dataset highlighted here or do you need assis
 
 |Author(s)|Title|DOI of publication|Repository and DOI of dataset|Curator(s)|Description of dataset|
 |---|---|---|---|---|---|
-|Carolin Huber, Erik Müller, Tobias Schulze, Werner Brack, Martin Krauss|Improving the screening analysis of pesticide metabolites in human biomonitoring by combining high-throughput in vitro incubation and automated LC−HRMS data processing|[DOI of publication](https://doi.org/10.1021/acs.analchem.1c00972)|[MetaboLighst](https://www.ebi.ac.uk/metabolights/MTBLS2402/metabolites)<br/>[MassBank-data](https://github.com/MassBank/MassBank-data/commit/691fe2429e33c883e56d5234277a6586a128cc5c)<br/>[GitHub](https://github.com/chufz/incubatoR)|curated by publishing authors""|The dataset, curated by the publishing authors, contain MS data is published in MetaboLight, Massbank and MassBank-data at GitHub. All raw mass spectra were converted to mzML format. The used code is available at GitHub and were referenced in corresponding article.|
-|Dennis Reinhard,Frank Rominger, Michael Mastalerz |Desymmetrization strategy to achieve triptycene-based 3,6-dimethoxytriphenylenes via oxidative cyclodehydrogenation |[DOI of publication](https://doi.org/10.1002/ejoc.202001073)|[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc25v89m)<br/>[heiData](https://doi.org/10.11588/data/OH6757)|curated by publishing authors|The datasets, curated by the publishing authors, and published in heiData, contains data of NMR, MS, IR in the instrument manufacturers formats.The IR data is also available in TSV format. Elemental analysis data is provided as JPG. Crystallographic data as CIF are available from CCDC. References to datasets in CCDC are given in the supporting information PDF of the corresponding article.|
+|Carolin Huber, Erik Müller, Tobias Schulze, Werner Brack, Martin Krauss|Improving the screening analysis of pesticide metabolites in human biomonitoring by combining high-throughput in vitro incubation and automated LC−HRMS data processing|[DOI of publication](https://doi.org/10.1021/acs.analchem.1c00972)|[MetaboLighst](https://www.ebi.ac.uk/metabolights/MTBLS2402/metabolites)<br/>[MassBank-data](https://github.com/MassBank/MassBank-data/commit/691fe2429e33c883e56d5234277a6586a128cc5c)<br/>[GitHub](https://github.com/chufz/incubatoR)|curated by publishing authors|The dataset, curated by the publishing authors, contain MS data is published in MetaboLight, Massbank and MassBank-data at GitHub. All raw mass spectra were converted to mzML format. The used code is available at GitHub and were referenced in corresponding article.|
+|Dennis Reinhard, Frank Rominger, Michael Mastalerz |Desymmetrization strategy to achieve triptycene-based 3,6-dimethoxytriphenylenes via oxidative cyclodehydrogenation |[DOI of publication](https://doi.org/10.1002/ejoc.202001073)|[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc25v89m)<br/>[heiData](https://doi.org/10.11588/data/OH6757)|curated by publishing authors|The datasets, curated by the publishing authors, and published in heiData, contains data of NMR, MS, IR in the instrument manufacturers formats.The IR data is also available in TSV format. Elemental analysis data is provided as JPG. Crystallographic data as CIF are available from CCDC. References to datasets in CCDC are given in the supporting information PDF of the corresponding article.|
 |Erik Müller, Carolin Huber, Liza-Marie Beckers, Werner Brack, Martin Krauss, Tobias Schulze |A data et of 255,000 randomly selected and manually classified extracted ion chromatograms for evaluation of peak detection methods |[DOI of publication](https://www.mdpi.com/2218-1989/10/4/162)|[Zenodo](https://doi.org/10.5281/zenodo.6137082)<br/>[MetaboLights](https://www.ebi.ac.uk/metabolights/MTBLS1455)|curated by publishing authors|The dataset, curated by the publishing authors, contains 255.000 extracted ion chromatograms (EICs or XICs) of 5000 peaks randomly sampled from across 51 environmental water samples for the evaluation on peak detection and gap filling algorithms.|
 |Fabian Thomas, Matthias Oster, Florian Schön, Kai C. Göbgen, Benedikt Amarouch, Dominik Steden, Alexander Hoffmann, Sonja Herres-Pawlis|A new generation of terminal copper nitrenes and their application in aromatic C–H amination reactions|[DOI of publication](https://doi.org/10.1039/d1dt00832c)|[Chemotion](https://dx.doi.org/10.14272/UFNYJPFRGDSKSE-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/LSGGPBYVWWQPOY-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/AXGNYRCNCNZKKZ-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/ZXFVPDKZHCLOHM-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/MHRJPVSEKXPPCE-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/BJUATVHTJTTWSW-UHFFFAOYSA-H.1)<br/>[Chemotion](https://dx.doi.org/10.14272/BJUATVHTJTTWSW-UHFFFAOYSA-H.1)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23w7mw)<br/>[ioChem-DB](https://doi.org/10.19061/iochem-bd-6-84)|curated by publishing authors|The datasets, curated by the publishing authors, contain NMR data in the instrument manufacturers formats and is also provided by Chemotion Repository in the open format JCAMP-DX. Crystallographic data as CIF files are available from CCDC and computational data was deposited in ioChem-DB. References to the crystallographic data is given in the section on supporting information in the corresponding publication. References on NMR data can be retrieved from the supplementary information PDF.|
 |Linda Jütten, Karla Ramírez-Gualito, Andreas Weilhard, Benjamin albrecht, Gabriel Cuevas, María del Carmen Fernández-Alonso, Jesús Jiménez-Barbero, Nils E. Schlörer, Dolores Diaz|Exploring the role of solvent on carbohydrate−aryl interactions by diffusion NMR-based studies|[DOI of publication](https://doi.org/10.1021/acsomega.7b01630)|[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004029)<br/>[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004074)<br/>[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004071)<br/>[NMRShifDB2](http://www.nmrshiftdb.org/molecule/60004072)<br/>[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004073)|curated by publishing authors|The dataset was curated by the publishing authors and is published in NMRShiftDB2. References to the dataset is given via DOI in the supporting information PDF.|
