--- a/docs/40_topics/50_ontology.mdx
+++ b/docs/40_topics/50_ontology.mdx
@@ -142,6 +142,7 @@ In order to be able to speak about the existing ontologies in the domain of chem
 * **application ontologies** are domain ontologies that are implemented in a concrete application and thus limited to the applications use cases
 
 ## Sources and further information
+* [Ontologies4Chem Article](https://doi.org/10.1515/pac-2021-2007)
 * [NFDI4Chem Terminology Service](https://terminology.nfdi4chem.de/ts/index)
 
 ----
