Added RADAR4Chem to repository list

--- a/docs/40_topics/20_repositories.mdx
+++ b/docs/40_topics/20_repositories.mdx
@@ -50,6 +50,7 @@ In the field of synthetic and analytical chemistry, the repository [Chemotion](h
 
 - [Chemotion Repository](https://www.chemotion-repository.net/welcome) Repository for molecules, reactions and research data 
 - [MassBank EU](https://massbank.eu/MassBank/) Ecosystem of databases and tools for mass spectrometry reference spectra (open source)
+- [RADAR4Chem](https://www.nfdi4chem.de/index.php/2650-2/) Offers a free and reliable home for all chemical research data that do not fulfill the specifications of other repositories
 - [SUPRABANK](https://suprabank.org/) Curated open resource for intermolecular interactions
 - [STRENDA DB](https://www.beilstein-strenda-db.org/) Standards for reporting enzymology data
 
