--- a/docs/40_topics/110_data_life_cycle.mdx
+++ b/docs/40_topics/110_data_life_cycle.mdx
@@ -55,7 +55,7 @@ In order to return these data to the cycle, it is important that these data are 
 
 What is the potential of your data?  
 
-## Sources and further Information
+## Sources and further information
 
 - DFG Guidelines for Safeguarding Good Research Practice. Code of Conduct [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3923602.svg)](https://doi.org/10.5281/zenodo.3923602)
 - [Introducing research data management as a service suite at RWTH Aachen University](https://dl.gi.de/handle/20.500.12116/894) <!--ISBN: 978-3-88579-651-0-->
