--- a/docs/40_topics/70_machine-readable_chemical_structures.mdx
+++ b/docs/40_topics/70_machine-readable_chemical_structures.mdx
@@ -30,7 +30,7 @@ To retrieve SMILES, InChI and InChIKey in ChemDoodle select a structure, then ch
 
 <!-- <img align="center" src={useBaseUrl('/img/topics/Screenshots_ChemDoodle_SMILES_InChI_InChIKey.png')} alt="ChemDoodle_SMILES_InChI_InChIKey" /> -->
 
-!["ChemDoodle_SMILES_InChI_InChIKey](/img/topics/Screenshots_ChemDoodle_SMILES_InChI_InChIKey.png =x100)
+![ChemDoodle_SMILES_InChI_InChIKey](/img/topics/Screenshots_ChemDoodle_SMILES_InChI_InChIKey.png =x100)
 
 
 (ChemDoodle v11.7.0, iChemLabs, LCC., Chesterfield, VA, United States, 2021.)
