--- a/docs/40_topics/70_machine-readable_chemical_structures.mdx
+++ b/docs/40_topics/70_machine-readable_chemical_structures.mdx
@@ -28,10 +28,7 @@ The name of the file might be chosen following your lab journal entry and also n
 
 To retrieve SMILES, InChI and InChIKey in ChemDoodle select a structure, then choose Edit -> Copy As -> Daylight SMILES or IUPAC InChI. 
 
-<!-- <img align="center" src={useBaseUrl('/img/topics/Screenshots_ChemDoodle_SMILES_InChI_InChIKey.png')} alt="ChemDoodle_SMILES_InChI_InChIKey" /> -->
-
-![ChemDoodle_SMILES_InChI_InChIKey](/img/topics/Screenshots_ChemDoodle_SMILES_InChI_InChIKey.png =x100)
-
+<img align="center" src={useBaseUrl('/img/topics/Screenshots_ChemDoodle_SMILES_InChI_InChIKey.png')} alt="ChemDoodle_SMILES_InChI_InChIKey" />
 
 (ChemDoodle v11.7.0, iChemLabs, LCC., Chesterfield, VA, United States, 2021.)
 
