update FAIR article

--- a/docs/40_topics/01_fair.mdx
+++ b/docs/40_topics/01_fair.mdx
@@ -96,7 +96,7 @@ Related datasets should be linked in a reliable manner, preferably via their PID
 
 ## Reusable
 
-Many of the previous points lead to one key aspect of data sharing: data reusability. Datasets must be described in a manner that allows the user to ascertain how and under which conditions the data can be reused.
+Many of the previous points lead to one key aspect of data sharing: data reusability. Datasets must be described in a manner that allows the user to easily determine how and under which conditions the data can be reused.
 
 ### R1. (meta)data are richly described with a plurality of accurate and relevant attributes
 
