--- a/docs/40_topics/100_pid.mdx
+++ b/docs/40_topics/100_pid.mdx
@@ -6,11 +6,11 @@ title: "Persistent Identifiers (PIDs)"
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-[Persistent identifiers](https://doi.org/10.5334/dsj-2017-009) (PIDs) are unique, long-lasting references to identified sources, such as publications, datasets or persons and allow to reliably locate, identify and verify the references. 
+[Persistent identifiers](https://doi.org/10.5334/dsj-2017-009) (PIDs) are unique, long-lasting references to identified sources, such as publications, datasets or persons and allow to reliably locate, identify, and verify the references.
 
-The two main PIDs employed within the chemistry community are Digital Object Identifiers ([DOIs](https://www.doi.org/)) as PIDs  for objects such as publications, datasets or software as well as [Open Research and Contributor iDs](https://doi.org/10.1087/20120404) ([ORCHiDs](https://orchid.org/)) for people. Additionally, the [Research Organization Registry](https://doi.org/10.6087/kcse.192) ([ROR](https://ror.org/)) is used to identify research institutions. Current development also includes Persistent Identification of Instruments ([PIDINST](https://doi.org/10.5334/dsj-2020-018)) as PIDs for the instrumentation used to obtain research data.
+The two main PIDs employed within the chemistry community are Digital Object Identifiers ([DOIs](https://www.doi.org/)) as PIDs for objects such as publications, datasets, or software as well as [Open Research and Contributor iDs](https://doi.org/10.1087/20120404) ([ORCiDs](https://orchid.org/)) for people. Additionally, the [Research Organization Registry](https://doi.org/10.6087/kcse.192) ([ROR](https://ror.org/)) is used to identify research institutions. Current development also includes Persistent Identification of Instruments ([PIDINST](https://doi.org/10.5334/dsj-2020-018)) as PIDs for the instrumentation used to obtain research data. [Persistent Identifiers for eResearch (ePIC)](https://www.pidconsortium.net/) is specifically designated for digital research data storage.
 
-The main benefits of PIDs for chemistry researchers are increased findability, visibility and ease of access of their scientific work. In the context of research data, PIDs are especially useful to interconnect publications and datasets in repositories.
+The main benefits of PIDs for chemistry researchers are increased findability, visibility, and ease of access of their scientific work. In the context of research data, PIDs are especially useful to interconnect publications and datasets in repositories.
 
 ## DOIs
 
@@ -18,7 +18,7 @@ The main benefits of PIDs for chemistry researchers are increased findability, v
 
 Digital Object Identifiers are PIDs for objects such as publications and datasets, but also physical objects, which are assigned by members of the [International DOI Foundation](https://datascience.codata.org/articles/abstract/353/). Most well-recognised DOI registration agencies include [CrossRef](https://www.crossref.org/) for publications and [DataCite](https://datacite.org/) focusing on [datasets](https://doi.org/10.1109/COINFO.2009.66).
 
-A DOI consists of a character string divided in to two parts by a slash. The prefix identifies the registrant, who retrieves a DOI from a DOI registration agency and always starts with “10.”. Every registrant has its own unique prefix. The suffix identifies a specific object registered by a registrant via a registration agency. DOIs are most frequently displayed as an URL like `https://doi.org/10.1000/182` including a resolver as HTTP proxy server to redirect to the linked object. DOIs are standardised by the [International Organisation for Standardisation](https://www.iso.org/) (ISO) in [ISO 26324](https://www.iso.org/standard/43506.html).
+A DOI consists of a character string divided into two parts by a slash. The prefix identifies the registrant, who retrieves a DOI from a DOI registration agency and always starts with “10.”. Every registrant has its own unique prefix. The suffix identifies a specific object registered by a registrant via a registration agency. DOIs are most frequently displayed as an URL such as `https://doi.org/10.1000/182` and include a resolver as HTTP proxy server to redirect to the linked object. DOIs are standardised by the [International Organisation for Standardisation](https://www.iso.org/) (ISO) in [ISO 26324](https://www.iso.org/standard/43506.html).
 
 <p align="center"><img align="center" src={useBaseUrl("/img/topics/crossref-logo-landscape-200.svg")} width="200" alt="Crossref logo" />
 <img align="center" src={useBaseUrl("/img/topics/datacite.svg")} class="align-center" width="200" alt="DataCite logo" /></p>
@@ -31,18 +31,29 @@ Registrants are [liable](https://support.datacite.org/docs/doi-registration-poli
 
 [ORCiDs](https://orchid.org/) are open and non-proprietary PIDs for authors also described as unique author identifiers and can be retrieved and used by any author free of charge. It is provided by the non-profit Open Research and Contributors ID organisation, ORCID Inc., and sustained by fees of member organisations, providing extended application program interfaces (API) for their members to integrate ORCiDs.
 
-An ORCiD is a [16-digit alphanumerical code](https://support.orcid.org/hc/en-us/articles/360006897674-Structure-of-the-ORCID-Identifier) to unambiguously identify authors, while author names might not be unique, may change or have different ordering conventions depending on cultural differences. ORCID iDs can be depicted as an URL, e.g. `https://orcid.org/0000-0000-0000-0000` but are also typically depicted without the resolver as an URN, e.g. `ORCID:0000-0000-0000-0000`. ORCiD iDs are a subset of International Standards Name Identifiers (ISNI) provided by the [International Organisation for Standardisation](https://www.iso.org/) (ISO) as [ISO 27729](https://www.iso.org/standard/44292.html).
+An ORCiD is a [16-digit alphanumerical code](https://support.orcid.org/hc/en-us/articles/360006897674-Structure-of-the-ORCID-Identifier) to unambiguously identify authors, whille author names might not be unique, may change, or may have different ordering conventions depending on cultural differences. ORCID iDs can be depicted as an URL, e.g. `https://orcid.org/0000-0000-0000-0000` but are also typically depicted without the resolver as an URN, e.g. `ORCID:0000-0000-0000-0000`. ORCiD iDs are a subset of International Standards Name Identifiers (ISNI) provided by the [International Organisation for Standardisation](https://www.iso.org/) (ISO) as [ISO 27729](https://www.iso.org/standard/44292.html).
 
-The [ORCHiD record](https://doi.org/10.1038/462825a) connected to ORCiDs includes the bibliographic output and may also provide information on employment, education and qualification, invited positions and distinctions, memberships as well as service and funding, depending on the privacy setting made by the author.
+The [ORCiD record](https://doi.org/10.1038/462825a) connected to ORCiDs includes the bibliographic output and may also provide information on employment, education and qualification, invited positions and distinctions, memberships as well as service and funding, depending on the privacy setting made by the author.
 
-In addition to ORCiDs as non-proprietary PIDs for authors there are also proprietary author identifiers such as Thomsen Reuters [Web Of Science’s Researcher ID](https://www.researcherid.com/#rid-for-researchers) and Elsevier’s [Scopus Author ID](https://www.scopus.com/freelookup/form/author.uri).
+In addition to ORCiDs as non-proprietary PIDs for authors, there are also proprietary author identifiers such as Thomson Reuters’ [Web of Science ResearcherID](https://www.researcherid.com/#rid-for-researchers) and Elsevier’s [Scopus Author ID](https://www.scopus.com/freelookup/form/author.uri).
 
-## Sources and further information 
+## ePICs
+
+![ePIC Header](../../static/img/topics/EPIC-header_transparent.png)
+
+<!--<img align="left" src={useBaseUrl("/img/topics/EPIC-header_transparent.png")} width="80" alt="ePIC Header logo" vspace="12" hspace="20" /> -->
+
+[ePIC](https://www.pidconsortium.net/), like the DOI, is based on the [Handle.Net Registry (HNR)](https://www.handle.net/) system, yet it is intended for unpublished digital research objects, while the [DOI](#dois) is intended for published objects. To this end, ePICs may be assigned even at early stages of research to locate research data and may be used by various research data management or archiving systems. Upon publication of a dataset, the full research data can be linked via the ePIC, for example, in cases that include proprietary or sensitive information. 
+
+This type of PID will commonly lead to a landing page, the content of which is maintained by the PID owner. Examples here include the dataset's metadata or a method of contacting those responsible for the dataset.
+
+## Sources and further information
 
 - English: [DOI Basics - DataCite](https://support.datacite.org/docs/doi-basics)
 - German: [Persistent Identifiers - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/persistent-identifiers-pids/)
 - German: [Digital Object Identifiers - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/digital-object-identifiers-dois/)
 - German: [Open Research and Contributor ID (ORICD iD) - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/open-researcher-and-contributor-id-orcid-id/)
+- English: [ePIC FAQs - PID Consortium](https://www.pidconsortium.net/?page_id=1060)
 
 ----
 Main author: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
