--- a/docs/00_intro.mdx
+++ b/docs/00_intro.mdx
@@ -14,7 +14,7 @@ Actions to promote Open Science and Research Data Management in accordance with 
 ## Why is RDM important for chemistry?
 
 :::danger Notice:                                
-Research Data Management in chemistry is currently not systematically organised and individual solutions of single institutions lead to low visibility, accessibility, and usability of research results. The added value of preserving and researching scientific data in chemistry is particularly high because the significance of the data is often immortal and older data can also be used for current investigations. In most cases, it is even mandatory to access older data, since experimental data or complex simulation data in particular can only be generated with great effort. A loss of previously acquired data can be an irretrievable loss of knowledge.<sup>[1](https://riojournal.com/article/55852/)</sup>
+Research Data Management in chemistry is currently not systematically organised and individual solutions of single institutions lead to low visibility, accessibility, and usability of research results. The added value of preserving and researching scientific data in chemistry is particularly high because the significance of the data is often immortal and older data can also be used for current investigations. In most cases, it is even mandatory to be able to access older data, since experimental data or complex simulation data in particular can only be generated with great effort. A loss of previously acquired data can be an irretrievable loss of knowledge.<sup>[1](https://riojournal.com/article/55852/)</sup>
 :::
 
 - prevention of data loss and data security
@@ -56,7 +56,7 @@ The handling data section explains common problems and challenges regarding RDM.
 
 ### Topics & Concepts
 
-These pages contain general information on concrete RDM topics and concepts explained in a chemical context. The articles do not just illustrate a subject, but relate it to important other topics and concepts. Check out the articles and learn more about the implementation of good RDM and FAIR science. Gain deeper insights into the following aspects:
+These pages contain general information on specific RDM topics and concepts explained in a chemical context. The articles do not just illustrate a subject, but relate it to important other topics and concepts. Check out the articles and learn more about the implementation of good RDM and FAIR science. Gain deeper insights into the following aspects:
 
 - general basics and principles
 - application and implementation
