--- a/docs/30_data/10_dmp.mdx
+++ b/docs/30_data/10_dmp.mdx
@@ -28,7 +28,7 @@ In addition to funder compliance, there should be an intrinsic motivation for a 
 
 ## DMP from funders' perspective
 
-A number of research funders require DMPs at different stages of the project. It is depending on the funder. For example, the EU expects a DMP after 6 months of the project start, in the middle as well as at the end of the project. In its Horizon Europe programme, the EU has been offering a new [DMP template](https://ec.europa.eu/info/funding-tenders/opportunities/docs/2021-2027/horizon/temp-form/report/data-management-plan-template_he_en.docx) to support DMP creation since May 2021. 
+A number of research funders require DMPs at different stages of the project. It depends on the funder. For example, the EU expects a DMP after 6 months of the project start, in the middle as well as at the end of the project. In its Horizon Europe programme, the EU has been offering a new [DMP template](https://ec.europa.eu/info/funding-tenders/opportunities/docs/2021-2027/horizon/temp-form/report/data-management-plan-template_he_en.docx) to support DMP creation since May 2021. 
 
 The German funding agencies do not regulate it as strictly as it is by the EU. For example, in certain projects the BMBF requires a so-called exploitation plan or information on the use of the results as part of the application. This requirement is already included in the funding guidelines, for instance in the funding programme of ["Coastal Sea Research in the North Sea and Baltic Sea - Coasts in Transition"](https://www.bmbf.de/bmbf/shareddocs/bekanntmachungen/de/2019/06/2463_bekanntmachung). 
 
