--- a/docs/30_data/40_data_documentation.mdx
+++ b/docs/30_data/40_data_documentation.mdx
@@ -18,7 +18,7 @@ _Andreas von der Dunk, Technische Universität Dresden, Service Center Research 
 
 <img alt="data for future generations" src={useBaseUrl('/img/data/data_1517.png')} width="250" align="right" vspace="10" hspace="10" />
 
-A clean and comprehensible organisation of data and documents are an important part of good scientific practice and an important step to realise research data management according to the [FAIR data principles](/docs/topics/fair). 
+A clean and comprehensible organisation of data and documents are an important part of good research practice and an important step to realise research data management according to the [FAIR data principles](/docs/topics/fair). 
 
 An essential task is to plan the organisation and storage of data, [metadata](/docs/topics/metadata), and documents in advance and to document the relevant measures.
 
